--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -29,3 +29,9 @@ redis.test.borrow=true
 redis.test.return=false
 
 #redis config end
+
+#closOrderTaskTime start
+
+close.order.task.time.hour = 2
+
+#closOrderTaskTime end
