--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -34,6 +34,7 @@ redis.test.return=false
 
 close.order.task.time.hour = 2
 
-lock.timeout = 50000    //ºÁÃëÊı
+#ºÁÃëÊı
+lock.timeout = 50000    
 
 #closOrderTaskTime end
